# frame-project

./: .pre-commit-config.yaml  Makefile  README.md  metadata_template.yaml
.github/ISSUE_TEMPLATE/: performance.md
.github/workflows/: deploy.yml  publish-api-container-dev.yml  publish-api-container.yml  publish-ui-container-dev.yml  publish-ui-container.yml  validate-metadata-files.yml
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
backend/api/: auth.py  config.py  main.py
backend/api/metadata_files/: change_auto_diff.yaml  external_metadata_files.yaml  external_references.yaml  gleam.yaml  hybrid_et.yaml  new_test_model.yaml  schema.json  superflexpy.yaml  tandc.yaml  template.yaml  utnc.yaml
backend/api/models/: common_metadata.py  component.py  computational_environment.py  computational_resources.py  data.py  hybrid_model.py  machine_learning_component.py  metadata_file.py  model.py  physics_based_component.py
backend/api/services/: metadata.py  s3.py
backend/api/utils/: file_nodes.py  file_size.py  mimetype.py
backend/api/views/: components.py  files.py  hybrid_models.py  models.py
backend/tests/: test_metadata_files.py
backend/tests/api/: test_components.py  test_hybrid_models.py
frontend/: .eslintrc-auto-import.json  README.md  entrypoint.sh  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/: auto-imports.d.ts  models.ts
frontend/src/assets/: introduction.md  links.json
frontend/src/boot/: api.ts  i18n.ts
frontend/src/components/: AppToolbar.vue  ComputationalResources.vue  CopyCommand.vue  CpuResource.vue  DataProperties.vue  GpuResource.vue  HybridModelList.vue  HybridModelSummary.vue  KeywordList.vue  LayersDrawer.vue  MetadataTable.vue  NeuralNetwork.vue  PullCommand.vue  SimpleDialog.vue  UnitFullAbstract.vue  UnitLink.vue  UnitList.vue  UnitSummary.vue  VersionSelector.vue  models.ts
frontend/src/css/: app.scss
frontend/src/i18n/en/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/models/: hybrid_model.ts  machine_learning_component.ts  physics_based_component.ts
frontend/src/pages/: AboutPage.vue  CliPage.vue  ContributePage.vue  HomePage.vue  HybridModelPage.vue  MachineLearningComponentPage.vue  PhysicsBasedComponentPage.vue  ProtocolPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: settings.ts
frontend/src/utils/: notify.ts
metadata/: gleam.yaml  hybrid_et.yaml  schema.json  superflexpy.yaml  tandc.yaml  template.yaml
