[project]
name = "frame-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"aiobotocore~=2.13.3",
	"dynaconf~=3.2.6",
	"fastapi~=0.111.0",
	"pandas~=2.2.2",
	"pillow~=10.4.0",
	"pydantic~=2.11.4",
	"pydantic-settings>=2.9.1",
	"requests~=2.32.3",
	"packaging~=24.2",
	"gitpython~=3.1.44",
	"exrex>=0.12.0",
]

[project.optional-dependencies]
dev = [
	"pre-commit~=4.0.1",
	"pytest~=8.3.3",
	"pytest-asyncio~=0.24.0",
	"pydantic-to-typescript~=2.0.0",
]
test = [
	"pytest~=8.3.3",
	"pytest-asyncio~=0.24.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
	"api",
	"api.models",
	"api.services",
]

[tool.ruff]
line-length = 120
preview = true

[tool.codespell]
skip = 'uv.lock'
